--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,6 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+
+@font-face {
+  font-family: 'Vazir';
+  src: local('Vazir'), url(../fonts/Vazir.woff) format('woff');
+  src: local('Vazir'), url(../fonts/Vazir.ttf) format('ttf');
+}
+
 body {
-  font-family: "DM Sans", sans-serif;
+  font-family: "Vazir" !important;
 }
 
 option {
